--- a/upgrade.yml
+++ b/upgrade.yml
@@ -1,21 +1,17 @@
 - name: Linux OS Patching
   hosts: ubuntuserver
   become: true
-  remote_user: root
   gather_facts: yes
 
   tasks:
-
     - name: Gather minimal facts
       ansible.builtin.setup:
-        gather_subset:
-          - '!all'
+        gather_subset: '!all'
 
     - name: Create backup directory on target servers
       ansible.builtin.file:
         path: /var/tmp/backups
         state: directory
-        mode: '0755'
 
     - name: Copy backup script to target servers
       ansible.builtin.copy:
@@ -45,8 +41,7 @@
       ansible.builtin.file:
         path: "/var/tmp/backups/{{ inventory_hostname }}"
         state: directory
-        mode: '0755'
-      delegate_to: localhost
+      delegate_to: 192.168.137.3
 
     - name: Pull backups from target servers to control server
       ansible.builtin.synchronize:
@@ -55,7 +50,7 @@
         mode: pull
         rsync_opts:
           - "--compress"
-      delegate_to: localhost
+      delegate_to: 192.168.137.3
 
     - name: Check file system utilization
       ansible.builtin.command: df -h /
@@ -89,15 +84,12 @@
         name: update-manager-core
         state: present
 
-    - name: Upgrade the distribution to Ubuntu
+    - name: Upgrade the distribution to Ubuntu (non-interactive)
       ansible.builtin.command: do-release-upgrade -f DistUpgradeViewNonInteractive
-      register: upgrade_output
-      ignore_errors: true
 
     - name: Reboot the server after distribution upgrade
       ansible.builtin.reboot:
         msg: "Reboot initiated by Ansible for OS upgrade"
-      when: upgrade_output is not failed
 
     - name: Get OS version after upgrade
       ansible.builtin.command: lsb_release -r
