--- a/upgrade.yml
+++ b/upgrade.yml
@@ -25,7 +25,7 @@
         chdir: /var/tmp
       environment:
         CONTROL_SERVER_IP: "192.168.137.3"
-      async: 600  # Increased timeout
+      async: 180
       poll: 0
       register: backup_job_id
 
@@ -34,23 +34,23 @@
         jid: "{{ backup_job_id.ansible_job_id }}"
       register: backup_result
       until: backup_result.finished
-      retries: 30  # Increased retries
+      retries: 10
       delay: 20
 
     - name: Create backup directory on control server
       ansible.builtin.file:
         path: "/var/tmp/backups/{{ inventory_hostname }}"
         state: directory
-      delegate_to: "{{ groups['controlserver'][0] }}"
+      delegate_to: 192.168.137.3
 
     - name: Pull backups from target servers to control server
       ansible.builtin.synchronize:
-        src: /var/tmp/backups/
+        src: "/var/tmp/backups/{{ inventory_hostname }}"
         dest: "/var/tmp/backups/{{ inventory_hostname }}"
         mode: pull
         rsync_opts:
           - "--compress"
-      delegate_to: "{{ groups['controlserver'][0] }}"
+      delegate_to: 192.168.137.3
 
     - name: Check file system utilization
       ansible.builtin.command: df -h /
